<resources>
    <string name="app_name">RestAuRant</string>
    <string name="rest_au_rant">Rest Au Rant</string>
    <string name="password">Password</string>
    <string name="user_icon">User icon</string>
    <string name="arrow_icon">Arrow icon</string>
    <string name="email">Email</string>
    <string name="google_icon">Google icon</string>
    <string name="google_web_client_id">274640493507-m6n9ml0egsjdo92422a5ttmf68i62ps1.apps.googleusercontent.com</string>
    <string name="google_client_id">274640493507-bn5e88c8jgq21b158m5qtdg54dr5aujm.apps.googleusercontent.com</string>
    <string name="activity_home_page">res/layout/activity_login.xml</string>
    <string name="restaurant_data">Restaurant Data</string>
    <string name="kitchen_dashboard">Kitchen Dashboard</string>
    <string name="scan_your_table_qr">Scan your Table QR</string>
    <string name="waiter_s_tables">Waiter\'s Tables</string>
    <string name="enter_table_id">Enter table\'s ID by yourself</string>
    <string name="test_redirect">Go</string>
    <string name="restaurant_menu">Restaurant Menu</string>
    <string name="order">Order</string>
    <string name="dish_image">dish img\n</string>
    <string name="dish_name">Dish Name</string>
    <string name="_20">20₪</string>
    <string name="_0">0</string>
    <string name="place_order">Place Order</string>
    <string name="how_can_we_help_you">How can we help you?</string>
    <string name="call_waiter">Call Waiter</string>
    <string name="request_water">Request Water</string>
    <string name="request_bill">Request Bill</string>
    <string name="order_by_yourself">Order by Yourself</string>
    <string name="assign_waiter_to_table">Assign Waiter to Table</string>
    <string name="assign">Assign</string>
    <string name="status">Status</string>
    <string name="order_status">Order Status</string>
    <string name="add_more_dishes">Add More Dishes</string>
    <string name="kitchen_orders">Kitchen Orders</string>
    <string name="ordered">ORDERED</string>
    <string name="ready">Ready</string>
    <string name="tablenum">tableNum</string>
    <string name="price">₪ Price</string>


</resources>