<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="horizontal"
    android:gravity="center_vertical">

    <ImageView
        android:id="@+id/dishImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/pasta"
        android:contentDescription="@string/dish_image"
        android:layout_marginEnd="8dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:fontFamily="cursive">

        <TextView
            android:id="@+id/dishName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dish_name"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="cursive"/>

        <TextView
            android:id="@+id/dishPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textSize="14sp"
            android:fontFamily="cursive" />
    </LinearLayout>

    <EditText
        android:id="@+id/quantityInput"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="number"
        android:hint="@string/_0"
        android:gravity="center"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="cursive" />
</LinearLayout>
